# PDF2BassTab

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Exemples/: michael_bublefeeling_good.mscz  michael_bublefeeling_good.musicxml  michael_bublefeeling_good.mxl
api/: main.py  pipeline.py
docs/superpowers/plans/: 2026-06-13-pdf2basstab-implementation.md
docs/superpowers/specs/: 2026-06-13-pdf2basstab-design.md
processing/: bass_extractor.py  fret_assigner.py  input_router.py  lilypond_renderer.py  models.py  musescore_exporter.py  music_parser.py  omr.py
tests/: test_bass_extractor.py  test_fret_assigner.py  test_input_router.py  test_integration.py  test_lilypond_renderer.py  test_models.py  test_musescore_exporter.py  test_omr.py
web/static/: style.css
web/templates/: index.html  result.html
