[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdf2basstab"
version = "0.1.0"
description = "Convert sheet music (PDF, MIDI, MusicXML, MSCZ) to bass guitar tablature PDF"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "music21==9.3.0",
    "aiofiles==24.1.0",
]

[project.scripts]
pdf2basstab = "api.main:app"

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.23.8",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
include = ["api*", "processing*", "web*"]

[tool.setuptools.package-data]
"web" = ["templates/*.html", "static/*"]
